styling~in progress

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jacqueline Taylor & Friends</title>
   </head>
-  <body>
+  <body className="bg-zinc-200 text-gray-700 font-family:font-serif font-sans text-align-center">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
